--- a/app/views/appointments/_meetup_booked.html.erb
+++ b/app/views/appointments/_meetup_booked.html.erb
@@ -1,9 +1,9 @@
 <% profile = Hostprofile.find_by_id(appointment.host_id) %>
 <% host = profile.user unless profile.nil? %>
 <% traveler = User.find_by_id(appointment.traveler_id) %>
-<%= link_to user_appointment_path(current_user, appointment) do %>
 <div class="booked-block">
    <div class="row">
+      <%= link_to user_appointment_path(current_user, appointment) do %>
        <div class="span3" style="width: 200px">
           <b style="color:#E65C5C">Meetup with
              <% if is_appt_host?(appointment) %> 
@@ -24,8 +24,8 @@
           <% end %>
        </div>
        <% end %>
-       <div class="span" style=" margin-left:-5px">
-          <div class="edit_link">        
+       <div class="span1" style="margin-left:-5px">
+          <div class="row edit_link">        
           <% if appointment.date - Date.today >= 2%>
                 <small>Booked</small><br/>      
                 <b>
