--- a/app/views/appointments/_meetup_booked.html.erb
+++ b/app/views/appointments/_meetup_booked.html.erb
@@ -41,7 +41,7 @@
               <% end %>
                  <small>Happened</small><br/>       
                 <b>
-                <%= link_to '<i class="icon-pencil"></i> Review'.html_safe, user_appointment_complete_appointment_path(user, appointment, review: title)%>
+                <%= link_to '<i class="icon-pencil" style="color:green"></i> Review'.html_safe, user_appointment_complete_appointment_path(user, appointment, review: title)%>
                 </b>
            <% else %>
                  <small>Booked </small>
