adding facebook open graph tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,12 @@
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>  
   <%= csrf_meta_tags %>
-  
+  <meta property="og:title" content="tiniHost" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.tinihost.com" />
+  <meta property="og:image" content="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-snc7/c18.18.221.221/s160x160/319070_286750878110982_1161685056_n.png" />
+  <meta property="og:site_name" content="tiniHost" />
+  <meta property="fb:admins" content="122610127" />
 </head>
 <body>
    <div id="fb-root"></div>
