--- a/app/views/reviews/_new_review.html.erb
+++ b/app/views/reviews/_new_review.html.erb
@@ -17,7 +17,7 @@
        </div>
 
       <div id="clear_float inline_review">
-         <%= f.input :content, label: "Leave a comment (optional)", :as=>"text", :input_html => {:id=>"inline_review"}, :placeholder=>"max 400 characters..."%>
+         <%= f.input :content, label: "Leave a comment (optional)", :input_html => {:id=>"inline_review"}, :placeholder=>"max 400 characters..."%>
       </div> 
       <%= f.button :submit, "complete meeting", :id=>"blue-button" %>
    </div>  
