--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <meta property="og:image" content="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-snc7/c18.18.221.221/s160x160/319070_286750878110982_1161685056_n.png" />
   <meta property="og:site_name" content="tiniHost" />
   <meta property="fb:admins" content="122610127" />
+  <meta property="og:description" content="tiniHost connects travelers and locals for a more authentic, personal, and responsible travel experience."/>
 </head>
 <body>
    <div id="fb-root"></div>
