--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,8 +19,8 @@
             <%= link_to "What about other cities?", about_path(view: "faq", anchor: "limited_cities") %>
          </div>
          <div class="row" id="location-button">
-            <%= link_to image_tag("facebook2.png", alt: "Tinihost facebook page", size: "100x100"), "https://www.facebook.com/tiniHost" %>
-            <%= link_to image_tag("twitter2.png", alt: "Tinihost twitter page", size: "100x100"), "https://twitter.com/tinihost" %>           
+            <%= link_to image_tag("facebook.png", alt: "Tinihost facebook page", size: "100x100"), "https://www.facebook.com/tiniHost" %>
+            <%= link_to image_tag("twitter.png", alt: "Tinihost twitter page", size: "100x100"), "https://twitter.com/tinihost" %>           
          </div>                 
          </div>
       </div>
