--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,8 +10,8 @@
       © tiniHost is a service that connects travelers to locals for a more authentic and original travel experience. We encourage socially and environmentally aware travel practices. We aim to build a respectful and trustworthy global travel community. 
      </div>
      <div class="span2 offset">
-       <%= link_to image_tag("facebook2.png", alt: "Tinihost facebook page", size: "45x45", style: "padding:0px; margin:0px"), "https://www.facebook.com/tiniHost" %>
-         <%= link_to image_tag("twitter2.png", alt: "Tinihost twitter page", size: "45x45"), "https://twitter.com/tinihost" %> 
+       <%= link_to image_tag("facebook.png", alt: "Tinihost facebook page", size: "45x45", style: "padding:0px; margin:0px"), "https://www.facebook.com/tiniHost" %>
+         <%= link_to image_tag("twitter.png", alt: "Tinihost twitter page", size: "45x45"), "https://twitter.com/tinihost" %> 
       </div>         
       <div class="span2">
          tiniHost on Facebook
