--- a/app/views/appointments/_meetup_booked.html.erb
+++ b/app/views/appointments/_meetup_booked.html.erb
@@ -1,6 +1,6 @@
-<% profile = Hostprofile.find_by_id(appointment.host_id) %>
-<% host = profile.user unless profile.nil? %>
+<% host = appointment.host.user unless appointment.host.nil? %>
 <% traveler = User.find_by_id(appointment.traveler_id) %>
+
 <div class="booked-block">
    <div class="row">
       <%= link_to user_appointment_path(current_user, appointment) do %>
