--- a/app/views/forumposts/_forumpost.html.erb
+++ b/app/views/forumposts/_forumpost.html.erb
@@ -1,52 +1,50 @@
 <div class="row email">
-      <% date = @posts.first.created_at.to_date unless @posts.empty? %>    
-      <% if date %>
-      <li id="seperator">
-         <b style="color:white"> Posted <%= date.to_date.to_formatted_s(:long) %></b>
-      </li>
-      <% end %>
+   <% date = @posts.first.created_at.to_date unless @posts.empty? %>    
+   <% if date %>
+   <li id="seperator">
+      <b style="color:white"> Posted <%= date.to_date.to_formatted_s(:long) %></b>
+   </li>
+   <% end %>
    <br>
    <% @posts.each do |p| %>
+   <%= link_to forumpost_path(p), class: "blocklink" do %>    
+   
       <% if p.created_at.to_date != date %>
-      </div> 
-      <br>
-      <div class="row email">
-      <li id="seperator">
-         <% date = p.created_at.to_date %>
-         <b style="color:white">Posted <%= date.to_formatted_s(:long) unless date.nil?%></b>
-      </li>
-      <br>
+         </div> 
+         <br>
+         <div class="row email">
+         <li id="seperator">
+            <% date = p.created_at.to_date %>
+            <b style="color:white">Posted <%= date.to_formatted_s(:long) unless date.nil?%></b>
+         </li>
+         <br>
       <% end %>
-      <%= link_to forumpost_path(p), class: "blocklink" do %>
-      
       <li id="link-block">
-         
       <div class ="row">
          <div class="span1">
             <%= image_tag(find_display_imgurl(p.user_id, "thumb"), size: "50x40")%>	
          </div>
          <div class="span3">
-               <b><%= p.user.firstname.capitalize%></b><br/>
-               <small><%= "#{City.find_by_id(p.city_id).name}, #{Country.find_by_id(p.country_id).name}" %></small><br>
-               <p style="color:#FF9933"><%= "Willing to pay #{p.price}#{p.currency}" unless p.pay == false %> </p>
+            <b><%= p.user.firstname.capitalize%></b><br/>
+            <small><%= "#{City.find_by_id(p.city_id).name}, #{Country.find_by_id(p.country_id).name}" %></small><br>
+            <p style="color:#FF9933">
+            <%= "Willing to pay #{p.price}#{p.currency}" unless p.pay == false %> 
+            </p>
          </div>
-         <div class="span6">
+         <div class="span5">
              <div>
                 <b> <%=p.title.capitalize%> </b>
                 <span class="timestamp" style="color:#3B9C9C">
                 for <%= p.date.to_formatted_s(:long) unless p.date.nil?%>
                 </span>
-             </div>
-             
+             </div>        
              <small id="hint">Responses <%= p.responded_count %> </small>       
          </div> 
-         <div class="span1">
+         <% end %>
+         <div class="span1" style="font-size:1.3em; padding-top:0px; margin-left:0px">
             <%= link_to '<br/> <i class="icon-trash" style="color:#e0467c"></i>'.html_safe, p, :confirm=>"Are you sure you want to delete this post?", :method=> :delete unless p.user_id != current_user.id %>
-            
          </div> 
       </div> 
-      </li>  
-      <% end %>
-        
+   </li>          
    <%end%>
 </div>
