--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -24,7 +24,7 @@
    </div>
    
    <div class="row" style="margin-top: 15px; background-color:#F5F2E9">
-      <div class="span10 offset1 email">
+      <div class="span11 email">
       <% @messages.each do |msg| %>
    	   <li class="thread">
    	      <div class="row">
@@ -32,7 +32,7 @@
    	      <div class="span1" %>         	   
    	         <%= image_tag find_display_imgurl(msg.sender_id, "thumb"), id: "profile-thumb" %>	
    	      </div>
-   	      <div class="span8" style="padding-left:15px">
+   	      <div class="span7" style="padding-left:15px">
                <div id="name">
                   <%= simple_format(msg.body) %> 
                </div>
