--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,9 +8,11 @@
          <%= render "personal_info" %>   
       </div>        
       <div class="row" style="margin: 0px 15px">
+         <% if !current_user?(@user) %>
          <div id="message_icon" class="icon-envelope-alt"> 
             <%= link_to 'Message ', new_user_message_path(@user) %>
          </div>
+         <% end %>
          <div id="message_icon" class="icon-share-alt"> 
             <%= link_to 'Tell a friend', mailfriend_user_path(@user) %>
          </div>             
