--- a/app/views/hostprofiles/_service_information.html.erb
+++ b/app/views/hostprofiles/_service_information.html.erb
@@ -21,7 +21,7 @@
      <div class="field" id="personalform">
           <%= f.label :What_relevant_experiences_do_you_have? %>
           <div style="width: 600px">
-              <small id="light">Tell us if you have any professions certifications or prior experiences hosting or guiding tourists.</small></div>
+              <small id="light">Tell us why you are qualified to host travelers?</small></div>
           <%= f.text_area :prof_exp %>
      </div>
      <div class="field" id="personalform">
