--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -16,8 +16,9 @@
                <label> Enter the languages you can hold a conversation in </label>
             </div>   
             <%= f.input :language_tokens, label: false, input_html: { data: {load: Language.prefill_languages(@user.languages)}} %>  
+            
          <div class="field" id="personalform">      
-            <%= f.input :self_intro, label: "Introduce yourself to everyone", input_html: {style: "margin-bottom:0px; padding-bottom:0px"} %>
+            <%= f.input :self_intro, as: :text, label: "Introduce yourself to everyone", input_html: {style: "margin-bottom:0px; padding-bottom:0px"} %>
              
              <a name="picture"></a>        
             
