adding google analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <meta property="og:site_name" content="tiniHost" />
   <meta property="fb:admins" content="122610127" />
   <meta property="og:description" content="tiniHost connects travelers and locals for a more authentic, personal, and responsible travel experience."/>
+  
+  <%= yield(:head_tags) %>
 </head>
 <body>
    <div id="fb-root"></div>
