--- a/app/views/forumposts/index.html.erb
+++ b/app/views/forumposts/index.html.erb
@@ -1,3 +1,16 @@
+<% content_for (:head_tags) do%>
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37125011-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+<% end %>
 <% provide(:title, "Corkboard") %>
 <div class="container">
    <%= render "corkboard_nav" %>
