--- a/app/views/site_mailer/signup_confirmation.html.erb
+++ b/app/views/site_mailer/signup_confirmation.html.erb
@@ -1,5 +1,5 @@
 <div class="span8">
-   <%= link_to image_tag("tinihost2.png", alt:"tinihost logo"), "http://www.tinihost.com" %>
+   <%= image_tag("tinihost2.png", alt:"tinihost logo") %>
    <br/><br/>
    <p> Hello <%= @user.firstname.capitalize %>, </p>
 
@@ -10,6 +10,7 @@
 
    tiniHost Team<br>
    www.tiniHost.com
+   <br/><br/>
    <hr/>
    <p id="hint"> You are receiving this email because your email addressed was used to sign up for a tiniHost account recently. Please disregard if you are not the intended recipient. </p>
    
