--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title> <%= default_title(yield(:title)) %> </title>
-  <%= favicon_link_tag "hat-favicon.ico" %>
+  <%= favicon_link_tag "hat-favicon2.ico" %>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>  
   <%= csrf_meta_tags %>
