--- a/app/views/site_mailer/signup_confirmation.html.erb
+++ b/app/views/site_mailer/signup_confirmation.html.erb
@@ -12,7 +12,7 @@
    www.tiniHost.com
    <br/><br/>
    <hr/>
-   <p id="hint"> You are receiving this email because your email addressed was used to sign up for a tiniHost account recently. Please disregard if you are not the intended recipient. </p>
+   <p id="hint"> You are receiving this email because your email address was used to sign up for a tiniHost account recently. Please disregard if you are not the intended recipient. </p>
    
 </div>
 
